<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@mipmap/develop_icon" />
<!---->

<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:alpha="0.05"-->
<!--        android:backgroundTint="#80FFFFFF"-->
<!--        android:backgroundTintMode="src_over"-->
<!--        android:src="@mipmap/develop_icon"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="0dp"-->
<!--        tools:layout_editor_absoluteY="0dp" />-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="SIGN UP"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/mar_30"
                android:textStyle="bold" />


            <include
                style="@style/Layout_WMHW"
                layout="@layout/app_bar_layout_home"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_groud"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/Layout_WMHW"
                    android:layout_marginLeft="@dimen/mar_30"
                    android:layout_marginRight="@dimen/mar_30"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:gravity="center"
                            android:text="First Name"
                            android:textColor="@color/textWhite"
                            android:textSize="@dimen/txt_20" />


                        <EditText
                            android:id="@+id/name_edt"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/btn_45"
                            android:layout_marginTop="@dimen/mar_5"
                            android:layout_marginBottom="@dimen/mar_5"
                            android:background="@drawable/rect_background"
                            android:hint="@string/pls_enter_first_name"
                            android:inputType="text"
                            android:maxLength="50"
                            android:paddingLeft="@dimen/mar_5"
                            android:text=""
                            android:textColor="@color/black"
                            android:textColorHint="@color/hint_color" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:gravity="center"
                            android:text="Last Name"
                            android:textColor="@color/textWhite"
                            android:textSize="@dimen/txt_20" />


                        <EditText
                            android:id="@+id/lastname_edt"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/btn_45"
                            android:layout_marginTop="@dimen/mar_5"
                            android:layout_marginBottom="@dimen/mar_5"
                            android:background="@drawable/rect_background"
                            android:hint="@string/pls_enter_last_name"
                            android:inputType="text"
                            android:maxLength="50"
                            android:paddingLeft="@dimen/mar_5"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/txt_20"
                            android:textColorHint="@color/hint_color" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:gravity="center"
                            android:text="Email "
                            android:textColor="@color/textWhite"
                            android:textSize="@dimen/txt_20" />

                        <EditText
                            android:id="@+id/email_edt"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/btn_45"
                            android:layout_marginTop="@dimen/mar_5"
                            android:layout_marginBottom="@dimen/mar_5"
                            android:background="@drawable/rect_background"
                            android:hint="@string/pls_enter_email"
                            android:inputType="text"
                            android:maxLength="50"
                            android:paddingLeft="@dimen/mar_5"
                            android:text=""
                            android:textSize="@dimen/txt_20"
                            android:textColor="@color/black"
                            android:textColorHint="@color/hint_color" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:gravity="center"
                            android:text="Mobile "
                            android:textColor="@color/textWhite"
                            android:textSize="@dimen/txt_20" />


                        <EditText
                            android:id="@+id/mobile_edt"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/btn_45"
                            android:layout_marginTop="@dimen/mar_5"
                            android:layout_marginBottom="@dimen/mar_5"
                            android:background="@drawable/rect_background"
                            android:hint="@string/pls_enter_mobile"
                            android:inputType="number"
                            android:maxLength="50"
                            android:paddingLeft="@dimen/mar_5"
                            android:text=""
                            android:textSize="@dimen/txt_20"
                            android:textColor="@color/black"
                            android:textColorHint="@color/hint_color" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:gravity="center"
                            android:text="Password "
                            android:textColor="@color/textWhite"
                            android:textSize="@dimen/txt_20" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/mar_50"
                            android:layout_marginTop="@dimen/mar_4"
                            android:background="@drawable/rect_background"
                            android:fontFamily="sans-serif"
                            android:hint="@string/pls_enter_password"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/mar_5"
                            android:text=""
                            android:textSize="@dimen/txt_20"
                            android:textColor="@color/black"
                            android:textColorHint="@color/hint_color" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:gravity="center"
                            android:text="Student ID"
                            android:textColor="@color/textWhite"
                            android:textSize="@dimen/txt_20" />

                        <EditText
                            android:id="@+id/studentId"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/mar_50"
                            android:layout_marginTop="@dimen/mar_4"
                            android:background="@drawable/rect_background"
                            android:fontFamily="sans-serif"
                            android:hint="@string/pls_enter_studentId"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/mar_5"
                            android:text=""
                            android:textSize="@dimen/txt_20"
                            android:textColor="@color/black"
                            android:textColorHint="@color/hint_color" />

                    </LinearLayout>


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/btn_40"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/mar_10"
                        android:background="@drawable/reclangle_shape"
                        android:gravity="center"
                        android:onClick="register"
                        android:text="@string/signup"
                        android:textColor="@color/textWhite" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/mar_20"
                        android:layout_marginBottom="@dimen/mar_5">


                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/btn_40"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/mar_30"
                            android:layout_marginRight="@dimen/mar_30"
                            android:layout_weight="1"
                            android:background="@drawable/reclangle_shape"
                            android:gravity="center"
                            android:onClick="back_BTN"
                            android:text="@string/back"
                            android:textColor="@color/textWhite" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/btn_40"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/mar_30"
                            android:layout_marginRight="@dimen/mar_30"
                            android:layout_weight="1"
                            android:background="@drawable/reclangle_shape"
                            android:gravity="center"
                            android:onClick="cancel_BTN"
                            android:text="@string/clear"
                            android:textColor="@color/textWhite" />


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
