<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            style="@style/Layout_WMHW"
            layout="@layout/app_bar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_bg"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mar_10"
                        android:text="@string/server_url"
                        android:layout_marginLeft="@dimen/mar_10"
                        android:textColor="@color/green"
                        android:textSize="@dimen/txt_18" />

                    <EditText
                        android:id="@+id/editTexturl"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/mar_50"
                        android:layout_marginBottom="@dimen/mar_10"
                        android:ems="10"
                        android:gravity="start|center"
                        android:hint="Enter url"
                        android:layout_marginLeft="@dimen/mar_10"
                        android:paddingLeft="@dimen/mar_10"
                        android:singleLine="true"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/txt_16"/>

                    <!--android:text="https://infyztoms.com"-->
                    <!--android:text="https://uat.infyztoms.com"-->
                    <!--android:text="http://192.168.1.40"-->
                    <!--android:text="http://192.168.1.138:8080"-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/mar_20">

                    <Button
                        android:id="@+id/buttonsave"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_40"
                        android:layout_weight="1"
                        android:background="@color/btn_bg"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_18" />

                    <Button
                        android:id="@+id/buttonreset"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_40"
                        android:layout_marginLeft="@dimen/mar_10"
                        android:layout_weight="1"
                        android:background="@color/green"
                        android:text="@string/reset"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_18" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <!-- <android.support.v4.widget.DrawerLayout
         android:id="@+id/mainDrawerLayout"
         style="@style/MianDrawerLayout_W0H0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">



         <LinearLayout
             android:id="@+id/mLeftDrawer"
             android:layout_width="180dp"
             android:layout_height="match_parent"
             android:layout_gravity="start|bottom"
             android:layout_marginTop="56dp"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
             android:dividerHeight="0dp"
             android:fitsSystemWindows="true"
             android:orientation="vertical"
             android:visibility="gone">

             <include
                 style="@style/Layout_WMHM"
                 layout="@layout/menu_inflator"/>

         </LinearLayout>

     </android.support.v4.widget.DrawerLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>